src/objects/PB_AssocDocRecurrence__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Document comment.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB_AssociatedDoc__c</fullName>
        <label>PB_AssociatedDoc</label>
        <referenceTo>PB_AssociatedDoc__c</referenceTo>
        <relationshipLabel>PB_AssocDocRecurrences</relationshipLabel>
        <relationshipName>PB_AssocDocRecurrences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PB_AssocDocRecurrence</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>PB_AssocDocRecurrence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PB_AssocDocRecurrences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>